--- a/Actions/AnalyzeTests/action.yaml
+++ b/Actions/AnalyzeTests/action.yaml
@@ -19,13 +19,13 @@ inputs:
     default: '7b7d'
   project:
     description: Project to analyze
-    required: true
+    required: false
+    default: '.'
 runs:
   using: composite
   steps:
     - name: run
       shell: ${{ inputs.shell }}
-      id: AnalyzeTests
       env:
         _actor: ${{ inputs.actor }}
         _token: ${{ inputs.token }}
