--- a/Actions/ReadSecrets/action.yaml
+++ b/Actions/ReadSecrets/action.yaml
@@ -16,6 +16,10 @@ inputs:
     description: Specifies the parent telemetry scope for the telemetry signal
     required: false
     default: '7b7d'
+outputs:
+  SettingsJson:
+    description: Settings in compressed Json format
+    value: ${{ steps.determineArtifactUrl.outputs.SettingsJson }}
 runs:
   using: composite
   steps:
