--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -96,8 +96,6 @@ jobs:
 
       - name: Determine Delivery Targets
         id: DetermineDeliveryTargets
-        env:
-          _SettingsJson: ${{ steps.ReadSecrets.outputs.SettingsJson }}
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           $deliveryTargets = @('GitHubPackages','NuGet','Storage')
@@ -127,7 +125,7 @@ jobs:
             $deliveryContext = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String([System.Environment]::GetEnvironmentVariable($contextName)))
             if ($deliveryContext) {
               $settingName = "DeliverTo$_"
-              $settings = $ENV:_SettingsJson | ConvertFrom-Json
+              $settings = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String('${{ steps.ReadSecrets.outputs.SettingsJson }}')) | ConvertFrom-Json | ConvertTo-HashTable
               if (($settings.PSObject.Properties.Name -eq $settingName) -and ($settings."$settingName".PSObject.Properties.Name -eq "Branches")) {
                 Write-Host "Branches:"
                 $settings."$settingName".Branches | ForEach-Object {
